# gad-pytest-playwright

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini
artefacts/report/: report.html  report.xml
src/pages/: base_page.py  main_page.py
src/pages/practice_pages/: practice_page.py
src/pages/practice_pages/simple_elements/: with_ids_page.py
src/tests/: conftest.py  test_test.py  test_with_ids.py
