[tool.poetry]
name = "gad automation (gui api demo)"
version = "0.1.0"
description = "POC automation project"
authors = ["Przemyslaw Lukasik <plukasik.projectq@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
playwright = "^1.47.0"
pytest-playwright = "^0.5.2"
pytest-html = "^4.1.1"
requests = "^2.32.3"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pytest-xdist = "^3.6.1"
pyhumps = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
