[tool.poetry]
name = "gad automation (gui api demo)"
version = "0.1.0"
description = "POC automation project"
authors = ["Przemyslaw Lukasik <plukasik.projectq@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
playwright = "^1.47.0"
pytest-playwright = "^0.5.2"
pytest-html = "^4.1.1"
requests = "^2.32.3"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pytest-xdist = "^3.6.1"
pyhumps = "^3.8.0"
mypy = "^1.11.2"
pyright = "^1.1.384"
debugpy = "^1.8.7"
dap-python = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
     \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/

)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pyright]
include = ["src"]
executionEnvironments = [
  { root = "."}
]

[tool.mypy]
ignore_missing_importe = true
